Fix extra whitespace in iOS Safari and similar. Again.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -203,7 +203,7 @@ p {
 
 #searchbar {
 	width: 100%;
-	overflow-x: auto;
+	overflow-x: hidden;
 }
 
 #searchbar form > * {
